--- a/blog.html
+++ b/blog.html
@@ -51,7 +51,113 @@
       </nav>
   </header>
   <h2 class="core">Blog Article</h2>
-  <article class="">
+  <article class="blog-main">
+<p> As we reflect on the technologies and tolls used on our process of web designing we began a journey of trying to understand how all of these languages, tool, libraries and frameworks work together and combined to achieve the ultimate goal of making our website attractive, functional, responsive, accessible and intuitive.
+At first when we started learning the languages codes I saw myself entering a whole different world of coding and designing.
+The 3 main languages learned were: HTML, CSS, JavaScript.
+</p>
+<p>HTML stands for HyperText Markup Language and is considered the very base of any website done until this very day.
+It is the very essence of the websites and it’s responsible for the structure of the pages and where all the content is.
+It is quite an interesting language as we cannot create a whole website with just a CSS file or just a JavaScript file as they depend on the HTML to work, but you can indeed make a simple functioning website using simply HTML. The Website might look like it came from the 90’s but you it will display text and images with some limited styling.
+</p>
+<p>On its very first version only very simple content was displayed and as other web browsers like Netscape used unique tags to improve their looks causing a stir, the need of a standardization was imminent and the 3.2 version was created. From there it has evolved to included cascading style sheets and even web application in the most recent version of it.
+If we use an analogy of a house, HTML would be the main structure of the house, where you can find room and within the room you might find appliances.
+</p>
+<p>Moving on to the second language used we can start talking about CSS.
+Cascading Style Sheets is a programming language responsible for the styling of your website. It works tagging the elements on the HTML code and giving them unique and personalised style.
+Anything from colours, position, alignment, padding, margin can be created and changed with CSS.
+It is quite amusing to watch you website simply transform when you starting styling with CSS. It’s capabilities are limitless. Even some simple animations can be achieved without the use of JavaScript, using only CSS.
+</p>
+<p>CSS was introduce as a way of separating the styling aspect of your website and keep your html about content. It has evolved from simply just adding things likes background colour and margin on its very first version, to its latest version where things like media queries was introduced which has changed the way we think of responsive web design.
+Using the same house analogy previously mentioned, CSS would change the colour and size of the walls, the style of the appliances and furniture and so on.
+</p>
+<p>And finally the last language we have touched base on was JavaScript.
+JavaScript is a scripting language responsible for the functionality and behaviour of you website.
+From a simple clickable button to elaborate animations and we applications, this language has certainly changed the game of web designing and it is imperative to learn if you intend in making functioning web site and applications
+It Is a widely used language to add interactivity to websites, develop mobile applications, create web browser based games and It’s so versatile that it can be used for back end development even though is mostly used in front end.
+And lastly in the house analogy, JavaScript would be the way we interact with the house by turning on and off lights or starting the dishwasher.
+</p>
+<p>Reflecting on the use of those languages that I’ve been learning for the past 10 weeks and that I’ve tried to apply into my proposed website there a few considerations to be made.
+For sure over time the use of each language is becoming more and more intuitive but there were definitely certain limitations and my vision of each language seem to be still quite narrowed.
+</p>
+<p>Talking about HTML I was able to achieve certain aspects of my website, where things related to the meta data tags or other HTML tags I haven’t seen or do not know the use of them. But the structure I had in mind and wanted to achieve was fairly possible using the structure of HTML.</p>
+<p>Moving over to CSS the styling of the html tag could have been very lengthy and frustrating specially when I was thinking of responsive design. I have however started studying and looking into using the bootstrap library to make my website look a lot nicer and more responsive to the different screen sizes. The use of bootstrap have definitely helped a lot in improving the aesthetic of the website and some functionality of it too.
+Even though bootstrap has helped a lot, some adjustment had to be made to make the website responsive to the change in screen size as the library used helps you but has its limitations.
+</p>
+<p>As we talk about JavaScript, that has definitely been the biggest struggle. The language itself is very difficult to understand and I still have not grasped how to apply it to my website.
+The only uses I can think of is on the toggle dropdown menu in the navigation bar that I got from the bootstrap library and it uses the Jquery library to make it responsive and also I was able to find a code to validate a contact form added to the contact page.
+So even though my knowledge of these languages is growing I had to resort to a library to achieve the design I was striving for.
+</p>
+<p>When we talk about web standards, we think on why there is a need for them and what are the most up to date ones used by web designers.
+The need for standardization was made necessary due to the fact there were many different types of browsers, different versions coming up which made designing for every single one of them nearly impossible as website would be made obsolete or broken when moving from one browser to another.
+Standards were then introduced to make sure the web is open, free and accessible to everyone.
+Standards Development Organisations (SDOs) are the groups responsible for the development of standards. Examples of these organisation can include: the Internet Engineering Task Force (IETF), the World Wide Web Consortium (W3C), the WHATWG, and ECMA TC39.
+</p>
+<p>One of the most prominent aspects of web standards nowadays would be accessibility.
+More and more web sites are being built with accessibility in mind as the need for platforms to be made for everyone is well overdue.
+From the development of HTML tags to create a flow so that screen readers can navigate your site and focus on the important parts of your content,  to the creation of the Web Content Accessibility Guideline(WCAG) where things like colour contrasts, font sizes are discussed, the path to a more accessible web is evolving.
+</p>
+<p>On this project I did try to focus as much as could in making it more accessible.
+Using  semantic HTML with headers, footers, articles, sections, alt attributes in images,  and in the design aspect making sure the contrast was high enough, with white spaces to make reading easier, easily signalised buttons, the font was at least the minimum required and images were displayed visibly, I believe I have strived for an accessible website on which the content can be accessed by all.
+</p>
+<p>I did run my website through the Google lighthouse audit and a couple of negative points were brought up on the accessibility session that scored 87%:
+<ul>
+  <li>1.	The lack of description to the some anchor tags In the html</li>
+  <li>2.	Contrast is not high enough</li>
+</ul>
+</p>
+<p>But it has also passed in some points such as:
+<ul>
+  <li>1.	Buttons having accessible names</li>
+<li>2.	Page having, heading, skip link or landmark regions</li>
+<li>3.	Html element has lang attribute</li>
+<li>4.	Images have alt attributes</li>
+
+</ul></p>
+<p>I have chosen to keep the colour scheme as it is as the only affected area would be the navigation bar.
+The only anchor tags that need to add a description to were the link for the social media icons. As they are simple, intuitive icons I have chosen to not add a description to them to keep the design clean.
+</p>
+<p>Another aspect of standard that can be mentioned is semantic web which is a way of structuring your web page in way it can be read directly by computers.
+As mentioned before, creating a semantic html and a “clean code” is the latest trend to make sure the website can be easily rendered and the last amount of code lines.
+I tried as much as possible using semantic markup, like the ones mentioned before, to separate and define the content of my website.</p>
+<p>One of the sides of best practise lately is the Search Engine Optimization (SEO). It is a way of using different tools to attract more traffic to your website by improving your visibility and position in the search engines such as Google. Even though search engines do not run validation in every single site to check if their code is right or not but a website with a lot of unclosed or improperly nested tags could hinder a search bot when crawling a page, hence why semantics is also important to search engines.
+The most important section of your html code to SEO’s is the header where they can find the title and meta data related to your website.
+I have implemented the meta tags with description of the website to increase the SEO’s capability of capturing some of the key words in it but also included a meta with keywords to make sure my website can show up in the search engines whenever those words are used.
+Also linking the CSS stylesheet and JavaScript instead of embedding it into the HTML increase the loading speed which contributes to the usability and making sure people stay on our website.
+</p>
+<p>I also ran a Google lighthouse audit to check the SEO score which came back with 89%
+Only  negative point was brought up:
+<ul>
+  <li>1.	Does not have e meta name=”view-port” tag with width or initial-scale</li>
+</ul>
+</p>
+<p>The positive points include:
+<ul>
+  <li>1.	Document has a title element</li>
+    <li>2.	It has a meta description</li>
+    <li>3.	Links have descriptive text</li>
+    <li>4.	Images have alt attributes</li>
+    <li>5.	Documents avoid plugins.</li>
+</ul></p>
+<p>After that analysis I have now include the view-port meta tag in the head of all pages and after the changes the score has changed to 100%.</p>
+<p>I have also entered my page into the W3 validator toll to check for any mistakes on my code.
+The only mistake I could find that is changeable was a lack of space between one attribute and the other in the images tags. Other than that the google fonts link was flagged as having a character now allowed but if I change it would break the link and also the fact that the icons used for the social media footer come from fontawesome and has a target element so they can open in a different page.
+</p>
+<p>If we think on more advanced technologies available, Angular is one the most used JavaScript based framework nowadays. It’s a structural framework for dynamic web apps that allows you to create rich, single-page applications quite easily. It’s a mobile and desktop-friendly which makes it easier as you won’t need code for different platforms.
+One of the interesting features of angular is that is uses client-side routing instead of service-side routing. So instead of the web browser making a request to the server to download the files of each page, angular will handle that so you don’t have to go to the server(unless you need data to fill the components)
+</p>
+<p>This technology is component based which makes web apps more expressive and have the feel you are not going from one page to another, giving you that desktop/mobile app experience where you feel the application reside in one single page.
+Thinking how my project might have beneficiated from this technology we can say that using Angular would decrease the loading times of my website and give it a more dynamic and intuitive feel to the page, giving that more modern application feeling instead of that break of waiting for a page to load.
+</p>
+<p>After going through all of these technologies and languages we can now finally discuss my development skills at this stage in time.
+Starting from having zero experience in programming to building my very first website have been quite the journey.
+I like to compare this final project website to the one we attempted to do in the reading week in which I tried to replicate a local business website and I can definitely say the concepts and ideas of certain aspect of html and css have been growing steadily and expanding my horizons on the potential each one of them have.
+</p>
+<p>From writing a html with better semantics to improve accessibility, to exploring more with css features I can definitely say I feel a lot more confident in elaborating a web site.
+I was able to achieve my design goals creating a responsive site that is easy to navigate and read and that is visually attractive with a colour scheme that is fluid.
+With the little I have been introduced to JavaScript I can already say that its capabilities are limitless and I hope to learn more and more about it to be able to incorporate it to my projects to create responsive and interactive web site and hopefully in the future even web applications.
+My hopes now are that I can expand my vision even wider to each of the languages and began to implement more clean and dry code into my daily life as a web designer and be able to add even more diverse skill into my portfolio.
+</p>
 
   </article>
   <footer id="contact">
