--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container-fluid">
 
       <nav class="navbar navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" alt= "homepage-link" href="index.html"><img src="images/brandlogo.png" alt="bee-logo"></a>
+        <a class="navbar-brand"  href="index.html"><img src="images/brandlogo.png" alt="bee-logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,20 +31,20 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" alt= "keytech-link" href="keytech.html">Core Technologies</a>
+              <a class="nav-link" href="keytech.html">Core Technologies</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" alt= "webtech-link" href="webtech.html">Application of Web Technologies</a>
+              <a class="nav-link"  href="webtech.html">Application of Web Technologies</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" alt= "design-link" href="design.html">Design Principles</a>
+              <a class="nav-link"  href="design.html">Design Principles</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" alt= "contac-link" href="contact.html">Contact</a>
+              <a class="nav-link"  href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" alt= "blog-link" href="blog.html">Blog</a>
+              <a class="nav-link"  href="blog.html">Blog</a>
             </li>
           </ul>
         </div>
@@ -96,17 +96,17 @@
     <div class="container-fluid">
       <div class="web-box row">
         <div class="web col-lg-4">
-          <img class="http-icon"src="images/http-icon.jpg" alt="http-logo">
+          <img class="http-icon" src="images/http-icon.jpg" alt="http-logo">
           <h3>HTTP</h3>
         </div>
 
         <div class="web col-lg-4">
-          <img class="www-icon"src="images/www-logo.jpg" alt="www-logo">
+          <img class="www-icon" src="images/www-logo.jpg" alt="www-logo">
           <h3>World Wide Web</h3>
         </div>
 
         <div class="web col-lg-4">
-          <img class="hosting-icon"src="images/hosting-icon.jpg" alt="http-logo">
+          <img class="hosting-icon" src="images/hosting-icon.jpg" alt="http-logo">
           <h3>Web Hosting</h3>
         </div>
       </div>
@@ -119,17 +119,17 @@
 <div class="container-fluid">
   <div class="des-box row">
     <div class="des col-lg-4">
-      <img class="des-icon"src="images/access.png" alt="accessibility-logo">
+      <img class="des-icon" src="images/access.png" alt="accessibility-logo">
       <h3>Web Accessibility</h3>
     </div>
 
     <div class="des col-lg-4">
-      <img class="des-icon"src="images/resp.png" alt="responsive-logo">
+      <img class="des-icon" src="images/resp.png" alt="responsive-logo">
       <h3>Responsive Web</h3>
     </div>
 
     <div class="des col-lg-4">
-      <img class="des-icon"src="images/colour.png" alt="colour-logo">
+      <img class="des-icon" src="images/colour.png" alt="colour-logo">
       <h3>Font, Colour and Images</h3>
     </div>
   </div>
@@ -139,10 +139,10 @@
   <footer id="contact">
     <div class="container-fluid">
 
-      <a href="http://twitter.com/tuliobessa" alt= "twitter-link" target="_blank"><i class="icon-footer fab fa-twitter"></i></a>
-      <a href="http://facebook.com/tuliobessa.me" alt= "facebook-link" target="_blank"><i class="icon-footer fab fa-facebook-f"></i></a>
-      <a href="http://instagram.com/tuliobessa" alt= "instagram-link" target="_blank"><i class="icon-footer fab fa-instagram"></i></a>
-      <a href="mailto:tuliorba@gmail.com"> <i class="icon-footer fas fa-envelope" alt= "email-link"  target="_blank"></i></a>
+      <a href="http://twitter.com/tuliobessa" target="_blank"><i class="icon-footer fab fa-twitter"></i></a>
+      <a href="http://facebook.com/tuliobessa.me" target="_blank"><i class="icon-footer fab fa-facebook-f"></i></a>
+      <a href="http://instagram.com/tuliobessa"  target="_blank"><i class="icon-footer fab fa-instagram"></i></a>
+      <a href="mailto:tuliorba@gmail.com"> <i class="icon-footer fas fa-envelope"  target="_blank"></i></a>
       <p class="copyright">© Copyright 2019 BeeCreative</p>
     </div>
   </footer>
