--- a/design.html
+++ b/design.html
@@ -23,7 +23,7 @@
     <div class="container-fluid">
 
       <nav class="navbar navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" alt= "homepage-link" href="index.html"><img src="images/brandlogo.png" alt="bee-logo"></a>
+        <a class="navbar-brand"  href="index.html"><img src="images/brandlogo.png" alt="bee-logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,20 +31,20 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" alt= "keytech-link" href="keytech.html">Core Technologies</a>
+              <a class="nav-link" href="keytech.html">Core Technologies</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" alt= "webtech-link" href="webtech.html">Application of Web Technologies</a>
+              <a class="nav-link"  href="webtech.html">Application of Web Technologies</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" alt= "design-link" href="design.html">Design Principles</a>
+              <a class="nav-link"  href="design.html">Design Principles</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" alt= "contac-link" href="contact.html">Contact</a>
+              <a class="nav-link"  href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" alt= "blog-link" href="blog.html">Blog</a>
+              <a class="nav-link"  href="blog.html">Blog</a>
             </li>
           </ul>
         </div>
@@ -83,14 +83,14 @@ The use of infographics, videos and graphics are always encouraged to make commu
 Loading times could also be an issues when thinking of your design. A few ways to improve the loading time would be optimising images sizes, combined code into a central CSS or JavaScript(this will reduce the HTTP requests) and minify HTML, CSS and JavaScript as the shorter are the lines of code the quicker it will be for them to load.
 </p>
 </article>
-<h4>Wanna know more about our services? Feel free to <a href="contact.html" alt="contact-link" >Contact us</a></h4>
+<h4>Wanna know more about our services? Feel free to <a href="contact.html"  >Contact us</a></h4>
       <footer id="contact">
         <div class="container-fluid">
 
-          <a href="http://twitter.com/tuliobessa" alt= "twitter-link" target="_blank"><i class="icon-footer fab fa-twitter"></i></a>
-          <a href="http://facebook.com/tuliobessa.me" alt= "facebook-link" target="_blank"><i class="icon-footer fab fa-facebook-f"></i></a>
-          <a href="http://instagram.com/tuliobessa" alt= "instagram-link" target="_blank"><i class="icon-footer fab fa-instagram"></i></a>
-          <a href="mailto:tuliorba@gmail.com"> <i class="icon-footer fas fa-envelope" alt= "email-link"  target="_blank"></i></a>
+          <a href="http://twitter.com/tuliobessa"  target="_blank"><i class="icon-footer fab fa-twitter"></i></a>
+          <a href="http://facebook.com/tuliobessa.me"  target="_blank"><i class="icon-footer fab fa-facebook-f"></i></a>
+          <a href="http://instagram.com/tuliobessa"  target="_blank"><i class="icon-footer fab fa-instagram"></i></a>
+          <a href="mailto:tuliorba@gmail.com"> <i class="icon-footer fas fa-envelope"  target="_blank"></i></a>
           <p class="copyright">© Copyright 2019 BeeCreative</p>
         </div>
       </footer>
