--- a/webtech.html
+++ b/webtech.html
@@ -14,7 +14,7 @@
   <link rel="icon" href="favicon.ico">
   <meta name="keywords" content="Web Technologies, Html, CSS, Javascript, Coding languages, web design, web technologies, design principles">
   <meta name="description" content="Bee Creative makes Web Design Simple and Easy to understand.">
-  <title>Bee Creative | pplication of Web Technologies</title>
+  <title>Bee Creative | Application of Web Technologies</title>
 </head>
 
 <body>
